fix category covers

--- a/src/components/common/EmojiCategoryCovers.module.scss
+++ b/src/components/common/EmojiCategoryCovers.module.scss
@@ -1,35 +1,51 @@
 .container {
+  border-radius: 1rem;
+  // height: 3rem;
+  &.activated {
+    width: 12rem;
+    padding: 0 0.375rem 0 0.125rem;
+    background-color: var(--color-interactive-element-hover);
+  }
+}
+
+.items {
+  vertical-align: middle;
   display: flex;
   flex-direction: row;
   align-items: center;
+  overflow-x: auto;
+  overflow-y: hidden;
 
-  width: 5rem;
+  scrollbar-width: none;
+  scrollbar-color: rgba(0, 0, 0, 0);
+
+  &::-webkit-scrollbar {
+    height: 0;
+  }
+
+  &::-webkit-scrollbar-thumb {
+    background-color: rgba(0, 0, 0, 0);
+  }
+
+  // Spacer to counter last button margin not being accounted in scroll width
+  &::after {
+    content: "";
+    display: block;
+    flex-shrink: 0;
+    width: 1px;
+    height: 1rem;
+  }
 }
 
 .symbolSetButton {
   display: inline-grid;
   vertical-align: middle;
-  grid-template-areas: "cover";
-  justify-content: center;
-  align-items: center;
 
   width: 2.25rem !important;
   height: 2.25rem;
   margin: 0.375rem 0.125rem !important;
   padding: 0;
-  border-radius: var(--border-radius-messages-small) !important;
-
-  &:global(.StickerButton) {
-    background-size: 1.875rem;
-
-    :global(.sticker-media),
-    :global(.AnimatedSticker) {
-      position: static;
-      grid-area: cover;
-      width: 1.875rem;
-      height: 1.875rem;
-    }
-  }
+  border-radius: 50%;
 
   &.activated {
     color: var(--color-text-lighter);
@@ -39,8 +55,14 @@
       --color-text-lighter: var(--color-text);
     }
   }
-}
 
-.activated {
-  background-color: var(--color-interactive-element-hover);
+  &.smaller {
+    width: 1.875rem !important;
+    height: 1.875rem;
+    margin: 0.125rem 0.125rem !important;
+
+    :global(.icon) {
+      font-size: 1.375rem;
+    }
+  }
 }
